# simple-transaction

./: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml
database/: dependencies.py  orm.py
database/migrations/: env.py
database/migrations/versions/: 696c8550f6fe_add_store_procedure_to_create_.py  e2e710984aeb_initial_migration.py
domain/: request.py  response.py
service/: service.py
src/account/http/: account.py
src/account/http/schema/: request.py  response.py
src/account/model/: entity.py
src/account/service/: account.py
src/transaction/http/: transaction.py
src/transaction/http/schema/: request.py  response.py
src/transaction/model/: entity.py
src/transaction/service/: transaction.py
test/: test_account.py  test_transaction.py
